Added author tag.

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   ================================================== -->
 	<meta charset="utf-8">
 	<title>Spencer Briere</title>
-	<meta name="description" content="">
-	<meta name="author" content="">
+	<meta name="description" content="A single page online resume.">
+	<meta name="author" content="Spencer Briere">
 
 	<!-- Mobile Specific Metas
   ================================================== -->
