Updated references to LinkedIn and Github

--- a/index.html
+++ b/index.html
@@ -99,9 +99,9 @@
          <h4>Spencer Briere</h4>
          <h6>Computer Science Graduate<br>Minored in Philosophy</h6>
          <p class="center">Studied at the University of Calgary<br>Graduated April 2017</p>
-         <a class="social" href="https://ca.linkedin.com/in/spencer-briere-66b3a099" alt=""><img class="scale-with-grid" src="./images/icons/social/linkedin.svg" alt=""></a>
+         <a class="social" href="https://ca.linkedin.com/in/spencerbriere" alt=""><img class="scale-with-grid" src="./images/icons/social/linkedin.svg" alt=""></a>
          <a class="social" href="mailto:spencerbriere@gmail.com" alt=""><img class="scale-with-grid" src="./images/icons/mail.svg" alt=""></a>
-         <a class="social" href="https://github.com/innuiyasha" alt=""><img class="scale-with-grid" src="./images/icons/github.svg" alt=""></a>
+         <a class="social" href="https://github.com/spencerbriere" alt=""><img class="scale-with-grid" src="./images/icons/github.svg" alt=""></a>
          </div>
          
          </div>
@@ -205,7 +205,7 @@
          <h4 class="h4">My Github Profile</h4>
          <p class="center h4">Feel free to view my projects.</p>
          </br>
-         <p class="center"><a href="https://github.com/innuiyasha" target="_blank"  class="btndow">Visit</a></p>
+         <p class="center"><a href="https://github.com/spencerbriere" target="_blank"  class="btndow">Visit</a></p>
          </div>
          <!--
          <div class="four columns alpha omega">
@@ -238,7 +238,7 @@
 		 <h4 class="white">E-Mail</h4>
          <a href="mailto:">spencerbriere@gmail.com</a>
          <h4 class="white">LinkedIn</h4>
-         <a class="social" href="https://ca.linkedin.com/in/spencer-briere-66b3a099" alt=""><img class="scale-with-grid" src="./images/icons/social/linkedin.svg" alt=""></a>
+         <a class="social" href="https://ca.linkedin.com/in/spencerbriere" alt=""><img class="scale-with-grid" src="./images/icons/social/linkedin.svg" alt=""></a>
    
    </div>
    </div>
